# agenticarchitecture

./: main.py  primaryagent.py  pyproject.toml
Docs/: Resume_prathyush.docx
Tools/: filereader.py  filereaderTest.py  playwrightloader.py  playwrightloaderTest.py  playwrightloaderTestWithoutRecursiveTextSplitter.py  portalsearch.py  portalsearchTest.py  testfilter.py  websearch.py  websearchtavily.py  websearchtavilyTest.py
